[package]
name = "mysite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
