[package]
name = "mysite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }
time-tz = { version = "2.0", features = ["system"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
teloxide = {version = "0.17.0", features = ["macros", "webhooks-axum", "webhooks"]}
tokio-stream = "0.1.17"
